Pat updated files

--- a/Week2/index.html
+++ b/Week2/index.html
@@ -5,10 +5,10 @@
 <head>
 	<title>Your Website</title>
 
-	<link rel="stylesheet" href="css/style.css"/>
+	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 </head>
 
-<body>
+<body style="background-color:red">
 
 
 	<h1> My Header</h1>
